--- a/index.html
+++ b/index.html
@@ -149,32 +149,31 @@
             </section>
               
             <!-- "reach out" section-->
-            <section>
-                <h2> Reach Out</h2>
+            <section id="reach-out" class="contact">
+                <h2 class="section-title secondary-border"> Reach Out</h2>
                 <div class="contact-info">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3172.130348129928!2d-78.16099228435644!3d37.33942264485906!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b233aa8f7c708d%3A0x7f9c27fb9bd23d1a!2s9021%20S%20Genito%20Rd%2C%20Jetersville%2C%20VA%2023083!5e0!3m2!1sen!2sus!4v1629991749714!5m2!1sen!2sus" 
-                       width="400" 
-                       height="400" 
                        style="border:0;" 
                        allowfullscreen="" 
                        loading="lazy">
                     </iframe> 
-                </div>
-                <div>
-                    <h3>Run Buddy</h3>
-                    <p>
-                        Any questions or concerns before signing up?
-                        <br />
-                        Let us know and we'll be happy to talk to you!
-                    </p>
-                    <address>
+                
+                     <div>
+                        <h3>Run Buddy</h3>
+                        <p>
+                         Any questions or concerns before signing up?
+                         <br />
+                         Let us know and we'll be happy to talk to you!
+                        </p>
+                        <address>
                         55 Main Street <br/>
                         Some Town, CA <br/>
                         12345 <br/>
                         P: 555.RUN.BUDZ (555.786.2839)<br/>
                         E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-                    </address>
-                </div>
+                        </address>
+                    </div>
+                /<div>
             </section>
 
             <!-- footer -->
