--- a/index.html
+++ b/index.html
@@ -152,48 +152,51 @@
             </section>
 
             <!-- "meet the trainers" section-->
-            <section id="your-trainers" class="trainers">
+            <section id="your-trainers">
                 <div class="flex-row">
                     <h2 class="section-title primary-border"> Meet The Trainers</h2>
                 </div>
 
-                <article class="trainer">
-                    <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-                    <div class="trainer-bio text-left">
-                        <h3>Arron Stephens</h3>
-                        <h4> Speed / Strength</h4>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident maiores neque omnis nobis fugit veritatis molestiae, 
-                            saepe eius ea quia pariatur doloribus aliquam ducimus vero odit voluptate, ipsa dignissimos fugiat?
-                        </p>
-                    </div>
-                </article>  
+                <div class="trainers">
+                    <article class="trainer">
+                        <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                        <div class="trainer-bio">
+                            <h3 class="trainer-name">Arron Stephens</h3>
+                            <h4 class="trainer-role"> Speed / Strength</h4>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident maiores neque omnis nobis fugit veritatis molestiae, 
+                                saepe eius ea quia pariatur doloribus aliquam ducimus vero odit voluptate, ipsa dignissimos fugiat?
+                            </p>
+                        </div>
+                    </article>  
 
-                <!--second trainer bio-->
-                <article class="trainer">
-                    <div class="trainer-bio text-right">
-                        <h3>Joanna Gill</h3>
-                        <h4>Endurance</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi suscipit nulla quos explicabo 
-                            non neque alias, voluptas aliquid cumque ipsum odit velit, sint sequi ducimus quas dolorem? Dolorem, excepturi possimus.
-                        </p>
-                    </div>
-                    <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
-                </article>
+                    <!--second trainer bio-->
+                    <article class="trainer">
+                        <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+                        <div class="trainer-bio">
+                            <h3 class="trainer-name">Joanna Gill</h3>
+                            <h4 class="trainer-role">Endurance</h4>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi suscipit nulla quos explicabo 
+                                non neque alias, voluptas aliquid cumque ipsum odit velit, sint sequi ducimus quas dolorem? Dolorem, excepturi possimus.
+                            </p>
+                        </div>
+                        
+                    </article>
 
-                <!--third trainer bio-->
-                <article class="trainer">
-                    <img src="./assets/images/trainer-3.jpg" 
-                      alt="Harry Smith wearing a headband and lifting comically small pink weights" />
-                    <div class="trainer-bio text-left">
-                        <h3>Harry "the Headband" Smith</h3>
-                        <h4>Strength</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos quam 
-                            quo ipsum vero deleniti aperiam, cum ut amet aliquam animi ipsa rem fuga laboriosam nostrum autem, eos quasi sit omnis!
-                        </p>
-                    </div>
-                </article>
+                    <!--third trainer bio-->
+                    <article class="trainer">
+                        <img src="./assets/images/trainer-3.jpg" 
+                        alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+                        <div class="trainer-bio">
+                            <h3 class="trainer-name">Harry "the Headband" Smith</h3>
+                            <h4 class="trainer-role">Strength</h4>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos quam 
+                                quo ipsum vero deleniti aperiam, cum ut amet aliquam animi ipsa rem fuga laboriosam nostrum autem, eos quasi sit omnis!
+                            </p>
+                        </div>
+                    </article>
+                </div>
             </section>
               
             <!-- "reach out" section-->
